pdaw_eazy/PdeasyParser.py
# Generated from Pdeasy.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PdeasyParser ( Parser ):

    grammarFileName = "Pdeasy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'@'", "'='", "'['", 
                     "','", "']'", "'.'", "'('", "')'", "':'", "'*'", "'/'", 
                     "'*~'", "'/~'", "'+'", "'-'", "'+~'", "'-~'", "'%'", 
                     "'=='", "'!='", "'>='", "'<'", "'<='", "'%~'", "'->'", 
                     "'in range'", "'patch'", "'import'", "'func'", "'block'", 
                     "'return'", "'>'", "'end'", "'if'", "'elif'", "'else'", 
                     "'for'", "'as'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "PATCH", "IMPORT", "FUNC", 
                      "BLOCK", "RETURN", "CONNECT", "END", "IF", "ELIF", 
                      "ELSE", "FOR", "AS", "VARTYPE", "IOLET", "NAME", "VARNAME", 
                      "SYMBOL", "NUMBER", "INTEGER", "FLOAT", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_patchstmt = 1
    RULE_importstmt = 2
    RULE_funcdefstmt = 3
    RULE_returnstmt = 4
    RULE_stmt = 5
    RULE_blockstmt = 6
    RULE_callstmt = 7
    RULE_nodedecl = 8
    RULE_simpledecl = 9
    RULE_list = 10
    RULE_listelem = 11
    RULE_list_access = 12
    RULE_connectionstmt = 13
    RULE_connectionelem = 14
    RULE_singlenode = 15
    RULE_parameters = 16
    RULE_typedparams = 17
    RULE_argslist = 18
    RULE_typedargslist = 19
    RULE_arg = 20
    RULE_typedarg = 21
    RULE_suite = 22
    RULE_operation = 23
    RULE_ifstmt = 24
    RULE_expr = 25
    RULE_node_expr = 26
    RULE_forstmt = 27
    RULE_varname = 28

    ruleNames =  [ "prog", "patchstmt", "importstmt", "funcdefstmt", "returnstmt", 
                   "stmt", "blockstmt", "callstmt", "nodedecl", "simpledecl", 
                   "list", "listelem", "list_access", "connectionstmt", 
                   "connectionelem", "singlenode", "parameters", "typedparams", 
                   "argslist", "typedargslist", "arg", "typedarg", "suite", 
                   "operation", "ifstmt", "expr", "node_expr", "forstmt", 
                   "varname" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    PATCH=30
    IMPORT=31
    FUNC=32
    BLOCK=33
    RETURN=34
    CONNECT=35
    END=36
    IF=37
    ELIF=38
    ELSE=39
    FOR=40
    AS=41
    VARTYPE=42
    IOLET=43
    NAME=44
    VARNAME=45
    SYMBOL=46
    NUMBER=47
    INTEGER=48
    FLOAT=49
    WS=50
    COMMENT=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def patchstmt(self):
            return self.getTypedRuleContext(PdeasyParser.PatchstmtContext,0)


        def importstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdeasyParser.ImportstmtContext)
            else:
                return self.getTypedRuleContext(PdeasyParser.ImportstmtContext,i)


        def funcdefstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdeasyParser.FuncdefstmtContext)
            else:
                return self.getTypedRuleContext(PdeasyParser.FuncdefstmtContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdeasyParser.StmtContext)
            else:
                return self.getTypedRuleContext(PdeasyParser.StmtContext,i)


        def getRuleIndex(self):
            return PdeasyParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PdeasyParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.patchstmt()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 59
                self.importstmt()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 65
                self.funcdefstmt()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 54022102835280) != 0:
                self.state = 71
                self.stmt()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.match(PdeasyParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatchstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PATCH(self):
            return self.getToken(PdeasyParser.PATCH, 0)

        def NAME(self):
            return self.getToken(PdeasyParser.NAME, 0)

        def getRuleIndex(self):
            return PdeasyParser.RULE_patchstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPatchstmt" ):
                listener.enterPatchstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPatchstmt" ):
                listener.exitPatchstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPatchstmt" ):
                return visitor.visitPatchstmt(self)
            else:
                return visitor.visitChildren(self)




    def patchstmt(self):

        localctx = PdeasyParser.PatchstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_patchstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(PdeasyParser.PATCH)
            self.state = 80
            self.match(PdeasyParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(PdeasyParser.IMPORT, 0)

        def NAME(self):
            return self.getToken(PdeasyParser.NAME, 0)

        def getRuleIndex(self):
            return PdeasyParser.RULE_importstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportstmt" ):
                listener.enterImportstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportstmt" ):
                listener.exitImportstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportstmt" ):
                return visitor.visitImportstmt(self)
            else:
                return visitor.visitChildren(self)




    def importstmt(self):

        localctx = PdeasyParser.ImportstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(PdeasyParser.IMPORT)
            self.state = 83
            self.match(PdeasyParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(PdeasyParser.FUNC, 0)

        def NAME(self):
            return self.getToken(PdeasyParser.NAME, 0)

        def typedparams(self):
            return self.getTypedRuleContext(PdeasyParser.TypedparamsContext,0)


        def suite(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdeasyParser.SuiteContext)
            else:
                return self.getTypedRuleContext(PdeasyParser.SuiteContext,i)


        def returnstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdeasyParser.ReturnstmtContext)
            else:
                return self.getTypedRuleContext(PdeasyParser.ReturnstmtContext,i)


        def getRuleIndex(self):
            return PdeasyParser.RULE_funcdefstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdefstmt" ):
                listener.enterFuncdefstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdefstmt" ):
                listener.exitFuncdefstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdefstmt" ):
                return visitor.visitFuncdefstmt(self)
            else:
                return visitor.visitChildren(self)




    def funcdefstmt(self):

        localctx = PdeasyParser.FuncdefstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcdefstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(PdeasyParser.FUNC)
            self.state = 86
            self.match(PdeasyParser.NAME)
            self.state = 87
            self.typedparams()
            self.state = 88
            self.match(PdeasyParser.T__1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 54022102835280) != 0:
                self.state = 89
                self.suite()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 95
                self.returnstmt()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(PdeasyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PdeasyParser.RETURN, 0)

        def varname(self):
            return self.getTypedRuleContext(PdeasyParser.VarnameContext,0)


        def expr(self):
            return self.getTypedRuleContext(PdeasyParser.ExprContext,0)


        def node_expr(self):
            return self.getTypedRuleContext(PdeasyParser.Node_exprContext,0)


        def getRuleIndex(self):
            return PdeasyParser.RULE_returnstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnstmt" ):
                listener.enterReturnstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnstmt" ):
                listener.exitReturnstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnstmt" ):
                return visitor.visitReturnstmt(self)
            else:
                return visitor.visitChildren(self)




    def returnstmt(self):

        localctx = PdeasyParser.ReturnstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_returnstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(PdeasyParser.RETURN)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 104
                self.varname()

            elif la_ == 2:
                self.state = 105
                self.expr(0)

            elif la_ == 3:
                self.state = 106
                self.node_expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(PdeasyParser.BlockstmtContext,0)


        def connectionstmt(self):
            return self.getTypedRuleContext(PdeasyParser.ConnectionstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(PdeasyParser.CallstmtContext,0)


        def nodedecl(self):
            return self.getTypedRuleContext(PdeasyParser.NodedeclContext,0)


        def simpledecl(self):
            return self.getTypedRuleContext(PdeasyParser.SimpledeclContext,0)


        def node_expr(self):
            return self.getTypedRuleContext(PdeasyParser.Node_exprContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(PdeasyParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(PdeasyParser.ForstmtContext,0)


        def getRuleIndex(self):
            return PdeasyParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PdeasyParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.blockstmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.connectionstmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.callstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.nodedecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.simpledecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.node_expr()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 115
                self.ifstmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 116
                self.forstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLOCK(self):
            return self.getToken(PdeasyParser.BLOCK, 0)

        def NAME(self):
            return self.getToken(PdeasyParser.NAME, 0)

        def typedparams(self):
            return self.getTypedRuleContext(PdeasyParser.TypedparamsContext,0)


        def suite(self):
            return self.getTypedRuleContext(PdeasyParser.SuiteContext,0)


        def getRuleIndex(self):
            return PdeasyParser.RULE_blockstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockstmt" ):
                listener.enterBlockstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockstmt" ):
                listener.exitBlockstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockstmt" ):
                return visitor.visitBlockstmt(self)
            else:
                return visitor.visitChildren(self)




    def blockstmt(self):

        localctx = PdeasyParser.BlockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blockstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(PdeasyParser.BLOCK)
            self.state = 120
            self.match(PdeasyParser.NAME)
            self.state = 121
            self.typedparams()
            self.state = 122
            self.match(PdeasyParser.T__1)
            self.state = 123
            self.suite()
            self.state = 124
            self.match(PdeasyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PdeasyParser.NAME, 0)

        def parameters(self):
            return self.getTypedRuleContext(PdeasyParser.ParametersContext,0)


        def AS(self):
            return self.getToken(PdeasyParser.AS, 0)

        def varname(self):
            return self.getTypedRuleContext(PdeasyParser.VarnameContext,0)


        def getRuleIndex(self):
            return PdeasyParser.RULE_callstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallstmt" ):
                listener.enterCallstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallstmt" ):
                listener.exitCallstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallstmt" ):
                return visitor.visitCallstmt(self)
            else:
                return visitor.visitChildren(self)




    def callstmt(self):

        localctx = PdeasyParser.CallstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_callstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(PdeasyParser.T__3)
            self.state = 127
            self.match(PdeasyParser.NAME)
            self.state = 128
            self.parameters()
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 129
                self.match(PdeasyParser.AS)
                self.state = 130
                self.varname()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PdeasyParser.RULE_nodedecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Nodedecl3Context(NodedeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdeasyParser.NodedeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self):
            return self.getTypedRuleContext(PdeasyParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl3" ):
                listener.enterNodedecl3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl3" ):
                listener.exitNodedecl3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl3" ):
                return visitor.visitNodedecl3(self)
            else:
                return visitor.visitChildren(self)


    class Nodedecl2Context(NodedeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdeasyParser.NodedeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(PdeasyParser.NAME, 0)
        def parameters(self):
            return self.getTypedRuleContext(PdeasyParser.ParametersContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl2" ):
                listener.enterNodedecl2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl2" ):
                listener.exitNodedecl2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl2" ):
                return visitor.visitNodedecl2(self)
            else:
                return visitor.visitChildren(self)


    class Nodedecl1Context(NodedeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdeasyParser.NodedeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varname(self):
            return self.getTypedRuleContext(PdeasyParser.VarnameContext,0)

        def NAME(self):
            return self.getToken(PdeasyParser.NAME, 0)
        def parameters(self):
            return self.getTypedRuleContext(PdeasyParser.ParametersContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl1" ):
                listener.enterNodedecl1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl1" ):
                listener.exitNodedecl1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl1" ):
                return visitor.visitNodedecl1(self)
            else:
                return visitor.visitChildren(self)


    class Nodedecl4Context(NodedeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdeasyParser.NodedeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varname(self):
            return self.getTypedRuleContext(PdeasyParser.VarnameContext,0)

        def operation(self):
            return self.getTypedRuleContext(PdeasyParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl4" ):
                listener.enterNodedecl4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl4" ):
                listener.exitNodedecl4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl4" ):
                return visitor.visitNodedecl4(self)
            else:
                return visitor.visitChildren(self)



    def nodedecl(self):

        localctx = PdeasyParser.NodedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nodedecl)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = PdeasyParser.Nodedecl1Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.varname()
                self.state = 134
                self.match(PdeasyParser.T__4)
                self.state = 135
                self.match(PdeasyParser.NAME)
                self.state = 136
                self.parameters()
                pass

            elif la_ == 2:
                localctx = PdeasyParser.Nodedecl2Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(PdeasyParser.NAME)
                self.state = 139
                self.parameters()
                pass

            elif la_ == 3:
                localctx = PdeasyParser.Nodedecl3Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.operation()
                pass

            elif la_ == 4:
                localctx = PdeasyParser.Nodedecl4Context(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.varname()
                self.state = 142
                self.match(PdeasyParser.T__4)
                self.state = 143
                self.operation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpledeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varname(self):
            return self.getTypedRuleContext(PdeasyParser.VarnameContext,0)


        def expr(self):
            return self.getTypedRuleContext(PdeasyParser.ExprContext,0)


        def list_(self):
            return self.getTypedRuleContext(PdeasyParser.ListContext,0)


        def getRuleIndex(self):
            return PdeasyParser.RULE_simpledecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpledecl" ):
                listener.enterSimpledecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpledecl" ):
                listener.exitSimpledecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpledecl" ):
                return visitor.visitSimpledecl(self)
            else:
                return visitor.visitChildren(self)




    def simpledecl(self):

        localctx = PdeasyParser.SimpledeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_simpledecl)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.varname()
                self.state = 148
                self.match(PdeasyParser.T__4)
                self.state = 149
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.varname()
                self.state = 152
                self.match(PdeasyParser.T__4)
                self.state = 153
                self.list_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listelem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdeasyParser.ListelemContext)
            else:
                return self.getTypedRuleContext(PdeasyParser.ListelemContext,i)


        def getRuleIndex(self):
            return PdeasyParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):
